# ros_pose_tracking

./: README.md
ros_pose_tracking/: CMakeLists.txt  package.xml
ros_pose_tracking/config/: pose_tracking_test.yaml
ros_pose_tracking/config/ur10e/: foxy.joint_limits.yaml  joint_limits.yaml
ros_pose_tracking/include/ros_pose_tracking/: ros_pose_tracking.hpp
ros_pose_tracking/launch/: eef_pose.panda.launch.py  foxy.ur_moveit.launch.py  humble.ur_moveit.launch.py  move_group.panda.launch.py  move_group.panda.rviz  move_group.panda.wo_MarkerArray.rviz  param.list  pose_tracking.panda.launch.py  pose_tracking.ur10e.launch.py  poses.txt
ros_pose_tracking/src/: ros_eef_pose.cpp  ros_pose_tracking.cpp  ros_pose_tracking_test.cpp
wmd2023/: package.xml  setup.cfg  setup.py
wmd2023/wmd2023/: hand_gesture.py
wmd2023/wmd2023/keypoint_classifier/: keypoint.csv  keypoint_classifier.tflite  keypoint_classifier_label.csv
